try to fix upload avatar on iphone

--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -213,7 +213,7 @@
     display: flex;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    /*overflow: hidden;*/
     justify-content: center;
     align-items: center;
     position: relative;
@@ -225,7 +225,7 @@
 
 .settingsss .add-ava label .ava,
 .settingsss .add-ava label .add {
-    overflow: hidden;
+    /*overflow: hidden;*/
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
